# TestCADContestD

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Modification.md  README.md  README.txt  architect.md  c_cpp_properties.json  cadd_problem_d  plan.txt  print_lp_input  sa_solver  test_buffer_chain_dp
include/: greedy_postlp.hpp  lp_apply.hpp  lp_buffer_dp.hpp  lp_mo_init.hpp  lp_print_input.hpp  lp_score.hpp  lp_solve.hpp  lp_types.hpp  pd_c_api.hpp  pd_checker.h  pd_clock.h  pd_config.h  pd_output.h  pd_parser.h  pd_timing.h  pd_types.h  pd_util.h  sa_apply.hpp  sa_eval.hpp  sa_path_solve.hpp  sa_solve.hpp
lib/: README.txt
result/new_result/: result.txt
result/print_lp_1/: README.txt  branches.tsv  ff_branch_paths.tsv  paths.tsv  summary.txt  timing_x0.txt  violating_paths_x0.tsv
result/testcase0/: greedy_debug.txt  greedy_postlp_bestimpr_t60.txt  greedy_postlp_t540.txt  lp.txt  modified_clk_tree.structure  result.txt  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
result/testcase1/: greedy_postlp_t540.txt  modified_clk_tree.structure  result.txt  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
result/testcase1_smoke/: modified_clk_tree.structure  result.txt
result/testcase2/: greedy_postlp_t540.txt  modified_clk_tree.structure  result.txt  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
result/testcase3/: greedy_postlp_t540.txt  modified_clk_tree.structure  result.txt  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
result/testcase4/: greedy_debug.txt  greedy_postlp_t540.txt  modified_clk_tree.structure  result.txt  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
result/testcase_basic/: greedy_debug.txt  greedy_postlp_t540.txt  modified_clk_tree.structure  result_postlp_greedy.txt  result_postlp_greedy_it10_t540.txt  result_sa_guarded.txt
scripts/: run_all.sh  run_one.sh  run_testcase0.sh  run_testcases_1_4.sh  run_timed_tc12.sh
src/: greedy_postlp.cpp  lp_apply.cpp  lp_branch.cpp  lp_buffer_dp.cpp  lp_mo_init.cpp  lp_print_input.cpp  lp_score.cpp  lp_solve.cpp  lp_solve_glpk.cpp  lp_solve_pg.cpp  main.c  main.cpp  pd_checker.c  pd_clock.c  pd_output.c  pd_parser.c  pd_timing.c  pd_util.c  sa_apply.cpp  sa_eval.cpp  sa_path_solve.cpp  sa_solve.cpp  sa_vds.cpp
testcase/testcase0/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure
testcase/testcase1/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure  modified_clk_tree.structure
testcase/testcase2/: FF_delay.rpt  SS_delay.rpt  clk_tree.structure  modified_clk_tree.structure
testcase/testcase3/: FF_delay.rpt  SS_delay.rpt  buf.lib  clk_tree.structure  modified_clk_tree.structure
testcase/testcase4/: clk_tree.structure  modified_clk_tree.structure
testcase/testcase_basic/: SS_delay.rpt  buf.lib  clk_tree.structure  modified_clk_tree.structure
tools/: print_lp_input.cpp
unittest/: test_buffer_chain_dp.cpp
utils/record/: buffer_record.cpp  buffer_record.h  ff_and_path_record.cpp  ff_and_path_record.h  ff_record.cpp  ff_record.h  graph_record.cpp  graph_record.h  path_record.cpp  path_record.h  record.cpp  record.h
utils/record/graphs/: clock_edge.cpp  clock_edge.h  clock_tree_vertex.cpp  clock_tree_vertex.h  clock_vertex.cpp  clock_vertex.h
utils/struct/: buffer.cpp  buffer.h  flipflop.cpp  flipflop.h
